fixes horizontal scrollbar

--- a/src/less/sections.less
+++ b/src/less/sections.less
@@ -2,5 +2,6 @@ section.dark {
     background: @dark-section-bg;
     color: @dark-section-fg;
     border-top: 0;
-    padding: 20px 0 40px;
+    padding-top: 20px;
+    padding-bottom:40px;
 }
